[gd_scene load_steps=2 format=3 uid="uid://ctoxwqbc67n3h"]

[ext_resource type="Script" path="res://material_maker/widgets/gradient_editor/gradient_edit_cursor.gd" id="1_3jpyo"]

[node name="GradientEditCursor" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_3jpyo")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
